--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title:              Moon
+title:              Redping
 bio:                'Minimal, one column jekyll theme.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+description:        "Well come to my blog bro!."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
