--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,14 @@
-# Site navigation links
+- title: Home
+  url: /
+
+- title: Blog
+  url: /blog/
 
 - title: Projects
   url: /projects/
-  
-- title: Home
-  url: /
+
+- title: About
+  url: /about/
+
+- title: Moon
+  url: http://taylantatli.me/Moon
