--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,9 @@
 
 # Site navigation links
 
-- titl-e: Projects
+- title: Projects
   url: /projects/
-
 - title: Java study
   url: /post_java/
+- title: Thinking
+  url: /thinking/
